# pytracking

./: .gitignore  .gitmodules  INSTALL.md  install_with_uv.sh  pyproject.toml  start.sh
examples/: cvtracker.py  minimal_tracking_demo.py  opencv.py  py2cv.py  py_vs_cv.py  pytk_vs_cv2.py  test_pytk.py
interfaces/: client.py  pytracking_client.py  pytracking_server.py  server.py
ltr/admin/: loading.py
ltr/models/backbone/: resnet.py
pytracking/: run_webcam.py
pytracking/evaluation/: tracker.py
pytracking/libs/: fourier.py  optimization.py
pytracking/tracker/atom/: atom.py
